<resources>
    <string name="app_name">Clínica veterinária</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="seu_pet">Seu pet em adoráveis e delicadas condições!</string>
    <string name="vamos_iniciar">Vamos iniciar</string>
    <string name="hello">Seja bem-vindo(a)</string>
    <string name="saudacao">Espero que esteja tudo bem contigo!</string>
    <string name="aviso">A clínica veterinária com o tratamento adequado para seu melhor amigo!</string>
    <string name="categorias">Quem atendemos</string>
    <string name="todos">Ver todos</string>
    <string name="top">Conheça nossos profissionais</string>
    <string name="categoria">Categoria</string>
    <string name="endereco">endereco</string>
    <string name="especialidade">especialidade</string>
    <string name="animais_atendidos">Animais atendidos</string>
    <string name="biografia">Biografia</string>
    <string name="experi_ncia">Experiência</string>
    <string name="reputa_o">Reputação</string>
    <string name="agendar_consulta_do_pet">Agendar consulta do pet</string>
    <string name="saudacao_inicial">Bem-vindo(a)!</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
    <string name="registrar">Registrar</string>
    <string name="registro_de_cliente">Registro de cliente</string>
    <string name="nome">Nome</string>
    <string name="cadastro_de_pessoa_f_sica_cpf">Cadastro de Pessoa Física (CPF)</string>
    <string name="telefone">Telefone</string>
    <string name="forgot_password">Esqueceu sua senha? Redefina!</string>
    <string name="register_account">Ainda não tem conta? Cadastre-se já!</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="registro_do_animal">Registro do animal</string>
    <string name="peso">Peso (opcional)</string>
    <string name="data_de_nascimento">Data de nascimento</string>
    <string name="qual_categoria">Qual categoria?</string>
    <string name="caozinho">Cachorro</string>
    <string name="gatinho">Gato</string>
    <string name="ave">Ave</string>
    <string name="criacao">Pecuária</string>
    <string name="cobra">Cobra</string>
    <string name="lagomorfo">Lagomorfo</string>
    <string name="roedor">Roedor</string>
    <string name="nome_opcional">Nome (opcional)</string>
    <string name="qual_o_sexo">Qual o sexo?</string>
    <string name="cancel">Cancelar</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="reset_password">Redefinição de senha</string>
    <string name="redefinir">Redefinir</string>
    <string name="retornar">Retornar</string>
    <string name="curiosidade">Curiosidade</string>
    <string name="curiosidades">Curiosidades</string>
    <string name="especialidad">Especialidade</string>
    <string name="meus_dados">Meus dados</string>
    <string name="meus_animais">Meus animais</string>
    <string name="sair">Sair</string>
    <string name="seus_animais">Seus animais</string>
    <string name="nome_do_animal">Nome do animal</string>
    <string name="peso_do_animal">Peso do animal</string>
    <string name="categoria_ordem_esp_cie">Categoria/ordem/espécie</string>
    <string name="sexo_do_animal">Sexo do animal</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="cpf">CPF</string>
    <string name="title">title</string>
    <string name="local_de_atendimento">Local de atendimento</string>
</resources>