<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blue"
    android:fitsSystemWindows="true"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.veterinaria16.Activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/icon_login"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saudacao_inicial"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="34sp"
            android:layout_marginStart="70dp"
        />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:ems="10"
            android:layout_marginTop="15dp"
            android:inputType="text"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:background="@drawable/edittext_bg"
            android:padding="16dp"
            />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:ems="10"
            android:layout_marginTop="25dp"
            android:inputType="textPassword"
            android:hint="@string/senha"
            android:textColor="@color/black"
            android:background="@drawable/edittext_bg"
            android:padding="16dp"
            />

        <TextView
            android:id="@+id/redefinirSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginStart="60dp"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:layout_gravity="start|top"
            android:layout_marginStart="40dp"
            android:layout_marginTop="6dp"
            android:backgroundTint="@color/dark_blue"
            android:text="@string/login"
            android:textSize="22sp"
            />
        <TextView
            android:id="@+id/registrarCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginStart="60dp"
            android:text="@string/register_account"
            android:textColor="@color/white"
            />


    </LinearLayout>
</ScrollView>