<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blue"
    android:fitsSystemWindows="true"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.veterinaria16.Activity.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        />

        <ImageView
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:layout_marginStart="56dp"
            app:srcCompat="@drawable/icon_login"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registro_de_cliente"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold"
            android:layout_marginStart="47dp"
            android:layout_marginTop="0dp"
            />


        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:ems="10"
            android:layout_marginTop="15dp"
            android:inputType="text"
            android:hint="@string/nome"
            android:textColor="@color/black"
            android:background="@drawable/edittext_bg"
            android:padding="16dp"
            />

        <EditText
            android:id="@+id/cpf"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:ems="10"
            android:layout_marginTop="15dp"
            android:inputType="text"
            android:hint="@string/cadastro_de_pessoa_f_sica_cpf"
            android:textColor="@color/black"
            android:background="@drawable/edittext_bg"
            android:padding="16dp"
            />

        <EditText
        android:id="@+id/telephone"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:ems="10"
        android:layout_marginTop="15dp"
        android:inputType="phone"
        android:hint="@string/telefone"
        android:textColor="@color/black"
        android:background="@drawable/edittext_bg"
        android:padding="16dp"
        />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:ems="10"
            android:layout_marginTop="15dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:background="@drawable/edittext_bg"
            android:padding="16dp"
            />



        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:ems="10"
            android:layout_marginTop="25dp"
            android:inputType="textPassword"
            android:hint="@string/senha"
            android:textColor="@color/black"
            android:background="@drawable/edittext_bg"
            android:padding="16dp"
            />

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:ems="10"
            android:layout_marginTop="25dp"
            android:inputType="textPassword"
            android:hint="@string/confirmar_senha"
            android:textColor="@color/black"
            android:background="@drawable/edittext_bg"
            android:padding="16dp"
            />

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:layout_gravity="start|top"
            android:layout_marginStart="40dp"
            android:layout_marginTop="14dp"
            android:backgroundTint="@color/dark_blue"
            android:text="@string/registrar"
            android:textSize="22sp"
            />

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:layout_gravity="start|top"
            android:layout_marginStart="40dp"
            android:layout_marginTop="6dp"
            android:backgroundTint="@color/red"
            android:text="Cancelar"
            android:textSize="22sp"
            />

    </LinearLayout>
</ScrollView>