<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.veterinaria16.Activity.IntroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/hello"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="130dp"
                android:layout_marginTop="30dp"
                app:srcCompat="@drawable/bell_icon" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/rounded_background"
            android:padding="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="188dp"
                android:layout_height="wrap_content"
                android:text="@string/aviso"
                android:textColor="@color/white"
                android:textSize="21sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"/>

            <ImageView
                android:layout_width="140dp"
                android:layout_height="120dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="0dp"
                app:srcCompat="@drawable/banner" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categorias"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/viewCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/viewCategory1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"/>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="110dp"
            android:orientation="horizontal"
            android:background="@drawable/icons_background"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="12dp">
            <ImageView
                android:id="@+id/settings"
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/settings"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/meus_dados"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                >
                <ImageView
                    android:id="@+id/animals"
                    android:layout_width="100dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/animals"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/meus_animais"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="7dp"
                >
                <ImageView
                    android:id="@+id/logout"
                    android:layout_width="100dp"
                    android:layout_height="70dp"
                    android:src="@drawable/logout"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:text="@string/sair"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</ScrollView>
